--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jake Choi",
+  "author": "Jake Choi <jake83@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jakech/ng-accordion-tabs.git"
+  },
   "license": "ISC",
   "dependencies": {
+    "css-loader": "^0.23.1",
     "eslint": "^2.10.2",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.8.0",
@@ -17,6 +22,9 @@
     "gulp-browserify": "^0.5.1",
     "gulp-webpack": "^1.5.0",
     "html-loader": "^0.4.3",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1",
     "underscore": "^1.8.3"
   }
 }
